package es.kiwi.behavioral.state.example6;

public class LeaveRequestContext extends StateMachine{
    //这里可以扩展跟自己流程相关的处理
}
