package es.kiwi.behavioral.state.example6;

public interface LeaveRequestState extends State {
    //这里可以扩展跟自己流程相关的处理
}
